--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   shelf: ^1.4.1
   shelf_router: ^1.1.4
+  shelf_router_generator: ^1.0.6
+  build_runner: ^2.4.4
 
 dev_dependencies:
   flutter_test:
