--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
+  retrofit: ^4.0.1
+  dio: ^5.1.2
+  freezed: ^2.3.4
+  build_runner: ^2.4.4
+  json_serializable: ^6.7.0
+  retrofit_generator: ^7.0.1
+  logger: ^1.3.0
 
 dev_dependencies:
   flutter_test:
